adult/logs/create_fluctuations_15091918_596.out
SLURM_JOBID:  15092517
SLURM_ARRAY_TASK_ID:  596
SLURM_ARRAY_JOB_ID:  15091918
  File "./baseline/adv_ratio.py", line 97
    if i % 20 == 0:
    ^
IndentationError: unexpected indent
('baseline', 4, 0.005, 160)


